updating the addUser endpoint implementation to take into accout user password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=UserService
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/GetHealthyUsers
+spring.datasource.username=postgres
+spring.datasource.password=Test123$
+spring.jpa.hibernate.ddl-auto=update
