--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=User-Service
 server.port=8081
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/GetHealthyUsers
 spring.datasource.username=postgres
